error.txt
node : file:///C:/User
s/Intel/Desktop/work%2
0space/AI_MALL_BACKEND
/routes/supportRoutes.
js:4
At line:1 char:1
+ node server.js 2>&1 
| Out-File -Encoding 
utf8 error.txt
+ ~~~~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (file:///C:   
 /User...portRoute    
s.js:4:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
import { 
sendContactAdminEmail 
} from 
'../utils/Email.js';
         
^^^^^^^^^^^^^^^^^^^^^
SyntaxError: The 
requested module 
'../utils/Email.js' 
does not provide an 
export named 'sendCont
actAdminEmail'
    at 
#asyncInstantiate (nod
e:internal/modules/esm
/module_job:302:21)
    at async 
ModuleJob.run (node:in
ternal/modules/esm/mod
ule_job:405:5)
    at async onImport.
tracePromise.__proto__
 (node:internal/module
s/esm/loader:660:26)
    at async asyncRunE
ntryPointWithESMLoader
 (node:internal/module
s/run_main:101:5)

Node.js v24.12.0
